# windows-default-manifest

./: .gitignore  COPYING  Makefile.in  README  Readme.md  configure  configure.ac  default-manifest.rc  package.json
.github/workflows/: ci.yml
esy.lock/: index.json
